--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 }
 /* Root Variable */
 :root{
-    --color-primary:#FF5722;
- 
+    --color-primary:#22215B;
+    --color-text:rgb(34, 33, 91, 0.6);
 }
 
 html{
@@ -33,12 +33,12 @@ main{
 }
 
 .container{
-    width: 1920px;
+    width: 1550px;
     height: 100%;
     background-color: #E5E5E5;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(11,80px);
+    grid-template-columns: repeat(3,478px);
+    /* grid-template-rows: repeat(11,80px); */
     gap: 25px ;
     padding: 30px ;
     font-size: 5rem;
@@ -49,24 +49,105 @@ main{
 .item{
  border-radius: 30px;
  background-color: #fff;
-
+ padding: 3.5rem 3rem;
 }
 
-p , span{
-    text-transform: capitalize;
- }
- 
+.normal{
+    font-size: 1.4rem;
+    color:var(--color-text);
+}
+
+.medium{
+    font-size: 2rem;
+    color: var(--color-primary);
+}
+
+.bold{
+    font-size: 3rem;
+    font-weight: 700;
+    color: var(--color-primary)
+}
+
+
+/* Item - a */
+
 .item_a{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     grid-column: 1/2;
     grid-row: 1/3;
-
 }
+
+.item_a .weather-text{
+    text-align: left;
+}
+
+.item_a .weather-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item_a .weather-icon i{
+    color: #567DF4;
+    font-size: 3.3rem;
+    margin-right: 1rem;
+    transform: translateY(-15%);
+}
+
+
+
+
+
+/* Item - b */
 
 .item_b{
     grid-column: 1/2;
     grid-row: 3/6;
+    display: flex;
+    flex-direction: column;
+  
+}
+.avatar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
+.avatar__cover img{
+    width: 70px;
+    background-color: #F1F3F6;
+    border-radius: 100%;
+}
+
+.avatar__title , .avatar__description{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.avatar__title{
+    margin-bottom: 2rem;
+}
+
+.avatar__title .bold{
+    font-size: 1.8rem;
+}
+
+.avatar__title .medium{
+    font-size: 1.5rem;
+}
+
+.avatar__description .bold{
+    font-size: 1.5rem;
+}
+
+.avatar__description .normal{
+    text-align: left;
+}
+/* Item - c */
 .item_c{
     grid-column: 1/2;
     grid-row: 6/12;
@@ -91,11 +172,27 @@ p , span{
    
 }
 
+
+/* Item - g */
+
 .item_g{
     grid-column: 3/4;
     grid-row: 1/2;
-   
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 3rem;
 }
+
+.item_g img{
+    width: 28px;
+    margin-right: 1rem;
+}
+
+
+
+
+
 
 .item_h{
     grid-column: 3/4;
