--- a/fonts.css
+++ b/fonts.css
@@ -7,6 +7,13 @@
 
 @font-face {
     font-family: "Gilroy";
+    font-weight: 500;
+    font-style: normal;
+    src: url("fonts//Gilroy-Medium.woff") format("woff") ;
+}
+
+@font-face {
+    font-family: "Gilroy";
     font-weight: 700;
     font-style: normal;
     src: url("fonts/Gilroy-Bold.woff") format("woff") ;
