--- a/style.css
+++ b/style.css
@@ -271,19 +271,17 @@ main{
 }
 
 .calendar-days{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    gap: 2rem;
+    margin-top: 1.5rem;
 }
 
-.day{
-padding: 1rem 2.5rem;
-}
 
 .num-day{
     font-size: 1.5rem;
     font-weight: 700;
-    color:rgb(34, 33, 91, 0.7);
+    color:rgb(34, 33, 91, 0.6);
 }
 
 .number{
@@ -299,7 +297,55 @@ padding: 1rem 2.5rem;
     color: rgb(34, 33, 91, 0.3);
 }
 
+.active{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:var(--color-primary);
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    color: #fff;
+}
 
+.active-light{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #EEF7FE;
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+
+}
+
+.event{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dats{
+    width: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dat{
+    width: 5px;
+    height: 5px;
+    border-radius: 100%;
+}
+
+.dat__red{
+    background-color: #FF5A5A;
+}
+.yellow{
+    background-color: #F8DF61;
+}
+.dat__blue{
+    background-color: #6194F8;
+}
 
 .item_f{
     grid-column: 2/3;
