--- a/style.css
+++ b/style.css
@@ -340,19 +340,75 @@ main{
 .dat__red{
     background-color: #FF5A5A;
 }
+
 .yellow{
     background-color: #F8DF61;
 }
+
 .dat__blue{
     background-color: #6194F8;
 }
 
+
+/* Item - f */
+
 .item_f{
     grid-column: 2/3;
     grid-row: 11/12;
-   
+    padding: 0;
+    overflow: hidden;
+    display: flex;
 }
 
+.dl-file{
+    width: 75%;
+    background-color: #567DF4;
+}
+
+.download{
+    display: flex;
+    margin: 1.2rem 3rem;
+}
+.dl-file img{
+    width: 25.5px;
+    height: 24px;
+    margin-top: 0.4rem;
+}
+
+.dl-des{
+    padding-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.cloud i{
+    color: #fff;
+}
+
+.dl-empty{
+    width: 25%;
+}
+
+.des__downloading{
+    color: #fff;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.des__Percent{
+    color: #fff;
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 18px;
+}
+
+.des__remain{
+    color: #fff;
+    font-size: 1.2rem;
+    text-transform: lowercase;
+}
 
 /* Item - g */
 
